# regcompliance-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/task1/: ground_truth.json  privacy_policy.txt
data/task2/: company_terms.txt  ground_truth.json  vendor_agreement.txt
data/task3/: employment_agreement.txt  ground_truth.json  moa.txt  privacy_policy.txt  shareholder_agreement.txt  vendor_contract.txt
env/: document_generator.py  grader.py  main.py  models.py
regcompliance_env/: grader.py  main.py  tasks.py
server/: app.py
ui/: index.html
uv_bin/uv-0.11.2.dist-info/: RECORD
