[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "regcompliance-env"
version = "1.0.0"
description = "OpenEnv environment for Indian startup legal compliance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["openenv", "legal", "compliance", "india"]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "server.app:main"
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/sarthakdhatrak/regcompliance-env"
Repository = "https://github.com/SarthakDhatrak/regcompliance-env"