[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regcompliance-env"
version = "1.0.0"
description = "OpenEnv environment for Indian startup legal compliance"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "regcompliance_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["regcompliance_env", "regcompliance_env.server"]
package-dir = { "regcompliance_env" = ".", "regcompliance_env.server" = "server" }

[tool.setuptools.package-data]
regcompliance_env = ["**/*.yaml", "**/*.yml", "**/*.md", "data/**/*"]